--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podcast</title>
+    <title>Podcast Project</title>
+
+    <!--CSS--> 
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./CSS/podcast.css">
+
+    <!--JS-->
+    <script src="./script.js" type="module" defer></script>
+
 </head>
 <body>
-    <audio id="episode-player" controls>
-        <source src="https://podcast-api.netlify.app/placeholder-audio.mp3" type="audio/mpeg"/>
-    </audio>
-<script src="./JS/main.js" type="module" defer></script>
+
+    <header id="header">
+        <h1>PODCASTS</h1>
+        <div>
+            <form>
+                <input id="search" type="text" placeholder="Search">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+        <ul id="nav">
+            <li><button>TEST</button></li>
+        </ul>
+    </header>
+    
+    <div id="app"> LOADING... </div>
+
+</body>
 </html>
