--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--CSS--> 
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./CSS/podcast.css">
+    <link rel="stylesheet" href="./CSS/thisPodcast.css">
 
     <!--JS-->
     <script src="./script.js" type="module" defer></script>
@@ -24,6 +24,11 @@
                 <button type="submit">Search</button>
             </form>
         </div>
+
+        <audio id="audio-player" controls>
+            <source id="audio-source" src="" type="audio/mp3" />
+        </audio>
+        
         <ul id="nav">
             <li><button>TEST</button></li>
         </ul>
